<resources>
    <string name="app_name">Business management system</string>
    <string name="Search">Search</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Upload_Avatar">Upload avatar</string>
    <string name="Added_Successfully">Added successfully</string>
    <string name="Successfully_Modified">Successfully modified</string>
    <string name="Name">Name</string>
    <string name="Type">Type</string>
    <string name="Classification">Classification</string>
    <string name="Industry">Industry</string>
    <string name="Customer_Source">Customer source</string>
    <string name="Status">Status</string>
    <string name="Product">Product</string>
    <string name="Priority_Level">Priority Level</string>
    <string name="enterprise_information_management">Company Information</string>
    <string name="Business_Details">Business details</string>
    <string name="Company_Name">Name:</string>
    <string name="Company_Code">Code:</string>
    <string name="Phone_Number">Phone number:</string>
    <string name="Area">Area:</string>
    <string name="Address">Address:</string>
    <string name="Mailbox">Mailbox:</string>
    <string name="Company_Industry">Industry:</string>
    <string name="Number">Number:</string>
    <string name="Number_of_open_accounts">Number of open accounts:</string>
    <string name="Company_Type">Type:</string>
    <string name="Company_Status">Status:</string>
    <string name="Please_fill_in_the_name">Please fill in the name.</string>
    <string name="Please_fill_in_the_number_of_open_accounts">Please fill in the number of open accounts.</string>
    <string name="Please_select_a_status">Please select a status.</string>
    <string name="New_businesses_are_not_available">New businesses are not available.</string>
    <string name="enterprise_account_management">Business account</string>
    <string name="Username">Username</string>
    <string name="Nickname">Nickname</string>
    <string name="Account_Details">Account details</string>
    <string name="Account_Username">Username:</string>
    <string name="Account_Nickname">Nickname:</string>
    <string name="Account_Password">Password:</string>
    <string name="Role_Classification">Role classification:</string>
    <string name="User_Type">User type:</string>
    <string name="Please_fill_in_the_password">Please fill in the password.</string>
    <string name="Please_select_a_role_classification">Please select a role classification.</string>
    <string name="Please_select_a_user_status">Please select a user status.</string>
    <string name="supplier_management">Supplier</string>
    <string name="Supplier_details">Supplier details</string>
    <string name="Zip_Code">Zip code:</string>
    <string name="Remarks">Remarks:</string>
    <string name="product_management">Product</string>
    <string name="Company_Classification">Classification:</string>
    <string name="Supplier">Supplier:</string>
    <string name="Product_Details">Product Details</string>
    <string name="Coding">Coding:</string>
    <string name="Supplier_Name">Supplier name:</string>
    <string name="Manufacturer_Name">Manufacturer name:</string>
    <string name="Unit_Price">Unit price:</string>
    <string name="Unit">Unit:</string>
    <string name="Stock_Quantity">Stock quantity:</string>
    <string name="Number_of_warnings">Number of warnings:</string>
    <string name="customer_management">Client</string>
    <string name="Customer_Details">Customer details</string>
    <string name="Number_of_employees">Number of employees:</string>
    <string name="Annual_Income">Annual income:</string>
    <string name="contact_management">Contact</string>
    <string name="Contact_Details">Contact details</string>
    <string name="Position">Position:</string>
    <string name="Company_Customer_Source">Customer source:</string>
    <string name="Affiliated_Company">Affiliated company:</string>
    <string name="User">User:</string>
    <string name="Cellphone_Number">Cellphone number:</string>
    <string name="Mailing_Address">Mailing address:</string>
    <string name="trading_order_management">Transaction order</string>
    <string name="fromUser">User</string>
    <string name="Start_Time">Start time</string>
    <string name="End_Time">End Time</string>
    <string name="Trading_Order_Details">Trading order details</string>
    <string name="Client_Name">Client's name:</string>
    <string name="Contact_Name">Contact name:</string>
    <string name="Amount">Amount:</string>
    <string name="Anticipated_Income">Anticipated income:</string>
    <string name="Source_Of_Clue">Source of clue:</string>
    <string name="Possibility_of_trading">Possibility of trading(%):</string>
    <string name="Description">Description:</string>
    <string name="Add_a_description">Add a description</string>
    <string name="quotation_management">Quotation</string>
    <string name="Quotation_Details">Quotation details</string>
    <string name="Quotation_Information">Quotation information:</string>
    <string name="Validity_Period">Validity period:</string>
    <string name="Delivery_Address">Delivery address:</string>
    <string name="Delivery_Address_Zip_Code">Delivery address-Zip code</string>
    <string name="Shipping_Address">Shipping address:</string>
    <string name="Shipping_Address_Zip_Code">Shipping address-Zip code:</string>
    <string name="Product_Detail">Product details:</string>
    <string name="Terms_and_Conditions">Terms and Conditions:</string>
    <string name="Please_enter_terms_and_conditions">Please enter terms and conditions.</string>
    <string name="sales_order_management">Sales Order</string>
    <string name="Sales_Order_Details">Sales order details</string>
    <string name="sales_commission">Sales commission:</string>
    <string name="delivery_order_management">Dispatch bill</string>
    <string name="Dispatch_bill_details">Dispatch bill details</string>
    <string name="Please_fill_in_the_logistics_number">Please fill in the logistics number.</string>
    <string name="Please_select_the_arrival_time">Please select the arrival time.</string>
    <string name="Please_fill_in_the_delivery_address">Please fill in the delivery address.</string>
    <string name="Please_fill_in_the_delivery_address_zip_code">Please fill in the delivery address zip code.</string>
    <string name="Please_fill_in_the_shipping_address">Please fill in the shipping address.</string>
    <string name="Please_fill_in_the_shipping_address_zip_code">Please fill in the shipping address zip code.</string>
    <string name="Sales_order_name">Sales order name</string>
    <string name="Logistics_number">Logistics number</string>
    <string name="Arrival_date">Arrival date</string>
    <string name="payment_management">Payment order</string>
    <string name="Payment_order_details">Payment order details</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Please_select_the_customer_name">Please select the customer name.</string>
    <string name="Please_enter_the_payment_amount">Please enter the payment amount.</string>
    <string name="Payment_amount">Payment amount:</string>
    <string name="Payment_time">Payment time:</string>
    <string name="Transaction_order_name">Transaction order name:</string>
    <string name="Is_there_an_invoice">Is there an invoice:</string>
    <string name="Has_it_been_printed">Has it been printed:</string>
    <string name="Invoice_photo">Invoice photo:</string>
    <string name="Add_remarks">Add remarks</string>
    <string name="service_record_management">Service record</string>
    <string name="Service_record_details">Service record details</string>
    <string name="Please_choose_the_type">Please choose the type.</string>
    <string name="Product_Name">Product name:</string>
    <string name="Company_Priority_Level">Priority Level:</string>
    <string name="Service_Reason">Service reason:</string>
    <string name="Solution">Solution:</string>
    <string name="Service_Tracking">Service tracking:</string>
    <string name="Add_Tracking">Add tracking</string>
    <string name="Order_description">Order description</string>
    <string name="inventory_management">Inventory management</string>
    <string name="Operation_Type">Operation type</string>
    <string name="Inventory_Details">Inventory details</string>
    <string name="Please_select_a_product">Please select a product.</string>
    <string name="Please_select_the_type_of_operation">Please select the type of operation.</string>
    <string name="Please_fill_in_the_quantity">Please fill in the quantity.</string>
    <string name="Inventory_Information">Inventory Information</string>
    <string name="Operation_Time">Operation time:</string>
    <string name="OperationType">Operation type:</string>
    <string name="Quantity">Quantity:</string>
    <string name="purchasing_management">Purchase order</string>
    <string name="Purchase_order_details">Purchase order details</string>
    <string name="Order_Date">Order date:</string>
    <string name="task_management">Task management</string>
    <string name="Task_Details">Task details</string>
    <string name="Reminder_Time">Reminder time:</string>
    <string name="pdf_report_management">PDF report</string>
    <string name="PDF_file_details">PDF file details</string>
    <string name="Please_fill_in_the_file_name">Please fill in the file name.</string>
    <string name="Please_upload_the_PDF_file">Please upload the PDF file.</string>
    <string name="PDF_file_information">PDF file information</string>
    <string name="File_name">File name:</string>
    <string name="PDF_file">PDF file:</string>
    <string name="packaging_data_management">Packaging data</string>
    <string name="Package_data_details">Package data details</string>
    <string name="Packaging_data_information">Packaging data information</string>
    <string name="Company_Start_Time">Start time:</string>
    <string name="Company_End_Time">End Time:</string>
    <string name="Packaging_data_volume">Packaging data volume:</string>
    <string name="Company_Trading_Order">Transaction order:</string>
    <string name="Company_Quotation">Quotation:</string>
    <string name="Company_Payment_order">Payment order:</string>
    <string name="Company_Purchase_order">Purchase order:</string>
    <string name="Company_Dispatch_bill">Dispatch bill:</string>
    <string name="Company_Sales_Order">Sales Order:</string>
    <string name="statistical_report_forms">Statistical report</string>
    <string name="Bill_Amount">Bill amount</string>
    <string name="Number_of_bills">Number of bills</string>
    <string name="Business_expenditure">Business expenditure</string>
    <string name="Service_statistics">Service statistics</string>
    <string name="Inventory_Statistics">Inventory statistics</string>
    <string name="Show_deleted">Show deleted</string>
    <string name="Export">Export</string>
    <string name="Company">Affiliated company</string>
    <string name="enterprise_expenditure_management">Business expenditure</string>
    <string name="Title">Title</string>
    <string name="Business_budget">Business budget</string>
    <string name="Please_fill_in_the_title">Please fill in the title.</string>
    <string name="Please_select_the_start_date">Please select the start date.</string>
    <string name="Please_select_the_end_date">Please select the end date.</string>
    <string name="login">Login</string>
    <string name="username_hint">Please enter a username</string>
    <string name="password_hint">Please enter your password</string>
    <string name="Service_record_information">Service record information:</string>
    <string name="forget_password">忘记密码</string>
</resources>