<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/F2F2F2"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/product_title_blue"
                    android:text="@string/Service_record_information" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Company_Name" />

                        <EditText
                            android:id="@+id/et_service_record_name"
                            style="@style/product_et_blue" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Product_Name" />

                        <com.africa.crm.businessmanagement.widget.MySpinner
                            android:id="@+id/spinner_product"
                            style="@style/product_et_blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            app:backgroundSelector="@drawable/background_selector2" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Company_Status" />

                        <com.africa.crm.businessmanagement.widget.MySpinner
                            android:id="@+id/spinner_state"
                            style="@style/product_et_blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            app:backgroundSelector="@drawable/background_selector2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Company_Type" />

                        <com.africa.crm.businessmanagement.widget.MySpinner
                            android:id="@+id/spinner_type"
                            style="@style/product_et_blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            app:backgroundSelector="@drawable/background_selector2" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Client_Name" />

                        <com.africa.crm.businessmanagement.widget.MySpinner
                            android:id="@+id/spinner_customer_name"
                            style="@style/product_et_blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            app:backgroundSelector="@drawable/background_selector2" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Company_Priority_Level" />

                        <com.africa.crm.businessmanagement.widget.MySpinner
                            android:id="@+id/spinner_level"
                            style="@style/product_et_blue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="0dp"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            app:backgroundSelector="@drawable/background_selector2" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Phone_Number" />

                        <EditText
                            android:id="@+id/et_phone"
                            style="@style/product_et_blue"
                            android:inputType="phone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/product_title_black"
                            android:text="@string/Mailbox" />

                        <EditText
                            android:id="@+id/et_email"
                            style="@style/product_et_blue" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/product_title_blue"
                    android:text="@string/Service_Reason" />

                <EditText
                    android:id="@+id/et_reason"
                    style="@style/product_et_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/Add_remarks"
                    android:textColorHint="@color/D5D5D5" />


                <TextView
                    style="@style/product_title_blue"
                    android:text="@string/Solution" />

                <EditText
                    android:id="@+id/et_solution"
                    style="@style/product_et_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/Add_remarks"
                    android:textColorHint="@color/D5D5D5" />

                <TextView
                    style="@style/product_title_blue"
                    android:text="@string/Remarks" />

                <EditText
                    android:id="@+id/et_remark"
                    style="@style/product_et_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/Add_remarks"
                    android:textColorHint="@color/D5D5D5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/product_title_blue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Service_Tracking" />

                    <TextView
                        android:id="@+id/tv_add_tracking"
                        style="@style/product_title_blue"
                        android:layout_gravity="bottom|right"
                        android:drawableLeft="@drawable/iv_add_logo_gray"
                        android:drawablePadding="5dp"
                        android:paddingRight="20dp"
                        android:text="@string/Add_Tracking"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_service_tracking"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:paddingTop="@dimen/activity_horizontal_margin" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/bg_button"
                    android:paddingLeft="38dp"
                    android:paddingTop="8dp"
                    android:paddingRight="38dp"
                    android:paddingBottom="8dp"
                    android:text="@string/Save"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility="invisible" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_button"
            android:paddingLeft="38dp"
            android:paddingTop="8dp"
            android:paddingRight="38dp"
            android:paddingBottom="8dp"
            android:text="@string/Save"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <include layout="@layout/layout_request_no_data" />

        <include layout="@layout/layout_request_network_error" />

    </FrameLayout>

</LinearLayout>