<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:id="@+id/ll_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="20dp"
        android:visibility="visible">

        <com.africa.crm.businessmanagement.widget.MySpinner
            android:id="@+id/spinner_product"
            style="@style/product_et_blue"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:backgroundSelector="@drawable/background_selector"
            app:hintText="@string/Product" />

        <com.africa.crm.businessmanagement.widget.MySpinner
            android:id="@+id/spinner_type"
            style="@style/product_et_blue"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            app:backgroundSelector="@drawable/background_selector"
            app:hintText="@string/Operation_Type" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.95"
            android:background="@drawable/et_bg_search"
            android:gravity="center_vertical"
            android:hint="@string/Start_Time"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/a333333"
            android:textColorHint="@color/C4C4C4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="0.95"
            android:background="@drawable/et_bg_search"
            android:gravity="center_vertical"
            android:hint="@string/End_Time"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/a333333"
            android:textColorHint="@color/C4C4C4"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.01"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_search"
                android:drawableLeft="@drawable/iv_search_logo_white"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="2dp"
                android:paddingRight="20dp"
                android:paddingBottom="2dp"
                android:text="@string/Search"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/layout_refresh_list" />
</LinearLayout>